@@ -1,3 +1,8 @@
+2008-12-18  Mark Ellis  <mark@mpellis.org.uk>
+
+	* configure.ac.in - require at least python 2.3, pyrex doesn't
+	  support 2.2; check pyrex version when python > 2.4
+
 2008-10-29  Mark Ellis  <mark@mpellis.org.uk>
 
 	* python/pyrapi2.pyx - enhance RAPIError exception, add error
